# finn.no

./: CMakeLists.txt  README.md  main.cpp
source/: BruktTing.cpp  BruktTing.h  Funksjoner.cpp  Funksjoner.h  LesData3.cpp  const.h  enum.h  kategori.cpp  kategori.h  kategorier.cpp  kategorier.dta  kategorier.h  kunde.cpp  kunde.h  kunder.cpp  kunder.dta  kunder.h  nyting.cpp  nyting.h
